; ModuleID = '/home/carl/AnghaBench/linux/drivers/pcmcia/extr_pcmcia_cis.c_pcmcia_do_get_tuple.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pcmcia/extr_pcmcia_cis.c_pcmcia_do_get_tuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcmcia_device = type { i32 }
%struct.TYPE_3__ = type { i32, i32 }
%struct.pcmcia_loop_get = type { i64*, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"do_get_tuple: out of memory\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcmcia_device*, %struct.TYPE_3__*, i8*)* @pcmcia_do_get_tuple to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcmcia_do_get_tuple(%struct.pcmcia_device* %0, %struct.TYPE_3__* %1, i8* %2) #0 {
  %4 = alloca %struct.pcmcia_device*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.pcmcia_loop_get*, align 8
  store %struct.pcmcia_device* %0, %struct.pcmcia_device** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.pcmcia_loop_get*
  store %struct.pcmcia_loop_get* %9, %struct.pcmcia_loop_get** %7, align 8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @GFP_KERNEL, align 4
  %14 = call i64 @kzalloc(i32 %12, i32 %13)
  %15 = load %struct.pcmcia_loop_get*, %struct.pcmcia_loop_get** %7, align 8
  %16 = getelementptr inbounds %struct.pcmcia_loop_get, %struct.pcmcia_loop_get* %15, i32 0, i32 0
  %17 = load i64*, i64** %16, align 8
  store i64 %14, i64* %17, align 8
  %18 = load %struct.pcmcia_loop_get*, %struct.pcmcia_loop_get** %7, align 8
  %19 = getelementptr inbounds %struct.pcmcia_loop_get, %struct.pcmcia_loop_get* %18, i32 0, i32 0
  %20 = load i64*, i64** %19, align 8
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %40

23:                                               ; preds = %3
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.pcmcia_loop_get*, %struct.pcmcia_loop_get** %7, align 8
  %28 = getelementptr inbounds %struct.pcmcia_loop_get, %struct.pcmcia_loop_get* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 8
  %29 = load %struct.pcmcia_loop_get*, %struct.pcmcia_loop_get** %7, align 8
  %30 = getelementptr inbounds %struct.pcmcia_loop_get, %struct.pcmcia_loop_get* %29, i32 0, i32 0
  %31 = load i64*, i64** %30, align 8
  %32 = load i64, i64* %31, align 8
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @memcpy(i64 %32, i32 %35, i32 %38)
  br label %44

40:                                               ; preds = %3
  %41 = load %struct.pcmcia_device*, %struct.pcmcia_device** %4, align 8
  %42 = getelementptr inbounds %struct.pcmcia_device, %struct.pcmcia_device* %41, i32 0, i32 0
  %43 = call i32 @dev_dbg(i32* %42, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  br label %44

44:                                               ; preds = %40, %23
  ret i32 0
}

declare dso_local i64 @kzalloc(i32, i32) #1

declare dso_local i32 @memcpy(i64, i32, i32) #1

declare dso_local i32 @dev_dbg(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
